finish blog, add axios, add pagination, add postForm and etc

--- a/src/App.sass
+++ b/src/App.sass
@@ -70,6 +70,15 @@ h1,h2,h3,h4,h5,h6
 .active
     color: #16CD53 !important
 
+.light
+    color: #fff
+    border-color: #fff
+
+.dark
+    color: #5C2000
+    border-color: #5C2000
+
+
 @media screen and (max-width: 1700px)
     .container
         max-width: 1160px
