--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -1,6 +1,10 @@
 .footer
     background-color: rgb(40, 41, 62)
     padding: 20px 0
+    position: fixed
+    z-index: 2
+    width: 100%
+    bottom: 0
     .footer__container
         text-align: center
     .footer__link
