--- a/src/components/Works/Works.sass
+++ b/src/components/Works/Works.sass
@@ -1,9 +1,12 @@
 .portfolio
-    padding: 50px 0
+    padding: 50px 0 100px 0
     .portfolio__container
         display: flex
         flex-direction: column
         align-items: center
+        color: #5C2000
+    button
+        margin-top: 50px
     .portfolio__categories
         display: flex
         align-items: center
